crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__error_unclosed_empty.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S {"
---
Item(
    1,
    11,
)
