crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_empty.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema Empty {}"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 13,
            },
        },
        value: "Empty",
    },
    from: None,
    items: [],
}
