crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_fields_same_line.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { a: min(1) b: max(2) }"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: "S",
    },
    from: None,
    items: [
        Field {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: "a",
            },
            typ: None,
            rules: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 18,
                            },
                        },
                        value: "min",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 19,
                                },
                                end: Position {
                                    line: 1,
                                    column: 20,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 1.0,
                                    text: "1",
                                },
                            ),
                        },
                    ],
                },
            ],
        },
        Field {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 22,
                    },
                    end: Position {
                        line: 1,
                        column: 23,
                    },
                },
                value: "b",
            },
            typ: None,
            rules: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 25,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "max",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 29,
                                },
                                end: Position {
                                    line: 1,
                                    column: 30,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 2.0,
                                    text: "2",
                                },
                            ),
                        },
                    ],
                },
            ],
        },
    ],
}
