crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_pick_trailing_comma.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema SignUp from users {\n    pick email, name,\n    password: String\n}\n"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        value: "SignUp",
    },
    from: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 20,
                },
                end: Position {
                    line: 1,
                    column: 25,
                },
            },
            value: "users",
        },
    ),
    items: [
        Pick(
            [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 10,
                        },
                        end: Position {
                            line: 2,
                            column: 15,
                        },
                    },
                    value: "email",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 17,
                        },
                        end: Position {
                            line: 2,
                            column: 21,
                        },
                    },
                    value: "name",
                },
            ],
        ),
        Field {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: "password",
            },
            typ: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 15,
                        },
                        end: Position {
                            line: 3,
                            column: 21,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 15,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 21,
                                        },
                                    },
                                    value: "String",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
            rules: [],
        },
    ],
}
