crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_pick_trailing_comma_then_pick.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S from users {\n    pick a,\n    pick b\n}\n"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: "S",
    },
    from: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 15,
                },
                end: Position {
                    line: 1,
                    column: 20,
                },
            },
            value: "users",
        },
    ),
    items: [
        Pick(
            [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 10,
                        },
                        end: Position {
                            line: 2,
                            column: 11,
                        },
                    },
                    value: "a",
                },
            ],
        ),
        Pick(
            [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Position {
                            line: 3,
                            column: 11,
                        },
                    },
                    value: "b",
                },
            ],
        ),
    ],
}
