crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_pick_twice.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema SignUp from users {\n    pick email\n    pick name\n}\n"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        value: "SignUp",
    },
    from: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 20,
                },
                end: Position {
                    line: 1,
                    column: 25,
                },
            },
            value: "users",
        },
    ),
    items: [
        Pick(
            [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 10,
                        },
                        end: Position {
                            line: 2,
                            column: 15,
                        },
                    },
                    value: "email",
                },
            ],
        ),
        Pick(
            [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Position {
                            line: 3,
                            column: 14,
                        },
                    },
                    value: "name",
                },
            ],
        ),
    ],
}
