crates/alder-parse/src/item/snapshots/alder_parse__item__schema__tests__schema_rule_args_multiple.snap
---
source: crates/alder-parse/src/item/schema.rs
description: "schema S { age: Number, between(18, 120) }"
---
SchemaDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 9,
            },
        },
        value: "S",
    },
    from: None,
    items: [
        Field {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: "age",
            },
            typ: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 17,
                        },
                        end: Position {
                            line: 1,
                            column: 23,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 23,
                                        },
                                    },
                                    value: "Number",
                                },
                            ],
                        },
                        args: [],
                    },
                },
            ),
            rules: [
                Modifier {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 25,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: "between",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 33,
                                },
                                end: Position {
                                    line: 1,
                                    column: 35,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 18.0,
                                    text: "18",
                                },
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 37,
                                },
                                end: Position {
                                    line: 1,
                                    column: 40,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 120.0,
                                    text: "120",
                                },
                            ),
                        },
                    ],
                },
            ],
        },
    ],
}
